AnnotWindow: Always show creation time in local time

BUG: 413591
(cherry picked from commit 92b7703292ab8cdef55be19524f916005b4c7dc8)